--- a/titles.html
+++ b/titles.html
@@ -18,8 +18,33 @@
       <img class="" src="images\titles.png" alt="Imagen de titulos educativos." height="15%" width="15%">
       <div class="title-row">
         <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
+        <h3>Automatización en las pruebas de software.</h3>
+        <p>CAES S.A (2022).</p>
+      </div>
+      <div class="title-row">
+        <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
         <h3>Marco agil Scrum.</h3>
         <p>CAES S.A (2021).</p>
+      </div>
+      <div class="title-row">
+        <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
+        <h3>Progrmación en .Net Core</h3>
+        <p>CPIC (2021).</p>
+      </div>
+      <div class="title-row">
+        <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
+        <h3>Diplomado en Desarrollo de Sitios Web y Aplicaciones Móviles</h3>
+        <p>Capacítate para el empleo (2020).</p>
+      </div>
+      <div class="title-row">
+        <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
+        <h3>Programador C#</h3>
+        <p>Capacítate para el empleo (2020).</p>
+      </div>
+      <div class="title-row">
+        <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
+        <h3>Tester</h3>
+        <p>Capacítate para el empleo (2020).</p>
       </div>
       <div class="title-row">
         <img class="title-img" src="images\title.png" alt="Imagen de titulos educativos.">
